--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
+  "name": "blog",
+  "private": true,
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "debug": "NODE_OPTIONS='--inspect' next dev",
+    "vercel-build": "yarn workspace nextra run build && yarn workspace nextra-theme-docs run build && yarn build",
+    "clean": "rimraf .next .turbo"
   },
   "dependencies": {
-    "next": "^13.1.1",
+    "react": "*",
+    "react-dom": "*",
+    "next": ">=13",
     "nextra": "^2.0.1",
-    "nextra-theme-blog": "^2.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "nextra-theme-blog": "^2.0.1"
+  },
+  "dependenciesMeta": {
+    "nextra": {
+      "injected": true
+    },
+    "nextra-theme-blog": {
+      "injected": true
+    }
   }
 }
